digiKam 8.0.0 - Release date: 2022-xx-xx

*****************************************************************************************************
NEW FEATURES:

General  : Port code to Qt6 and KF6 framework.
General  : Add JPEG-XL, WEBP, and AVIF export settings everywhere.
           Add convert to lossless JPEG-XL, WEBP, and AVIF while importing from camera.
           Add JPEG-XL; WEBP, and AVIF converters in Batch Queue Manager.
Usability: Add hamburger menu to tool-bar if main menu is hidden.

*****************************************************************************************************
BUGFIXES:

001 ==> 416704 - Port digiKam to Qt6 and KF6 API.
002 ==> 450153 - All groups deleted by "Extended clean up and shrink all databases".
003 ==> 450518 - Crash when opening Advanced Search.
004 ==> 450467 - digiKam git source build fails.
005 ==> 450642 - Provide an option to open the light table after click on thumbnail.
006 ==> 450643 - Expose menus optionally in the toolbar : burger main menu feature.
007 ==> 451017 - Search by time of day.
008 ==> 349268 - Be able to copy and paste the uploaded url to ImgUr web service.
009 ==> 451525 - Maintenance tool dialog should not keep potentially destructive operations checked by default.
010 ==> 251424 - Include gpx overlays found in albums.
011 ==> 451802 - GPX files fails to load.
012 ==> 